--- a/Capacitores.html
+++ b/Capacitores.html
@@ -68,7 +68,7 @@
 
     <p><strong>Aquí agregarás tu información sobre capacitores.</strong> Puedes explicar cómo almacenan energía, sus tipos, usos comunes y ejemplos en circuitos prácticos.</p>
 
-    <a href="Pagina Circuitos.html">⬅ Volver al menú</a>
+    <a href="index.html">⬅ Volver al menú</a>
   </div>
 </body>
 </html>
