--- a/Diodos.html
+++ b/Diodos.html
@@ -68,7 +68,7 @@
 
     <p><strong>Aquí agregarás tu información sobre diodos.</strong> Puedes explicar cómo permiten el paso de corriente en un solo sentido, sus tipos y ejemplos en rectificadores o protección de circuitos.</p>
 
-    <a href="Pagina Circuitos.html">⬅ Volver al menú</a>
+    <a href="index.html">⬅ Volver al menú</a>
   </div>
 </body>
 </html>
