--- a/Inductores.html
+++ b/Inductores.html
@@ -68,7 +68,7 @@
 
     <p><strong>Aquí agregarás tu información sobre inductores.</strong> Puedes describir cómo funcionan mediante campos magnéticos, sus usos más comunes y ejemplos en circuitos reales.</p>
 
-    <a href="Pagina Circuitos.html">⬅ Volver al menú</a>
+    <a href="index.html">⬅ Volver al menú</a>
   </div>
 </body>
 </html>
