--- a/Resistores.html
+++ b/Resistores.html
@@ -69,7 +69,7 @@
 
     <p><strong>Aquí agregarás tu información sobre resistores.</strong> Puedes explicar qué son, para qué sirven, cómo funcionan y ejemplos en circuitos reales. Ya dejé todo listo para que solo pegues tu contenido cuando lo tengas.</p>
 
-    <a href="Pagina Circuitos.html">⬅ Volver al menú</a>
+    <a href="index.html">⬅ Volver al menú</a>
   </div>
 </body>
 </html>
