--- a/Transistores.html
+++ b/Transistores.html
@@ -69,7 +69,7 @@
 
     <p><strong>Aquí agregarás tu información sobre transistores.</strong> Puedes explicar cómo funcionan como interruptores o amplificadores, sus tipos (BJT, MOSFET) y su importancia en la electrónica moderna.</p>
 
-    <a href="Pagina Circuitos.html">⬅ Volver al menú</a>
+    <a href="index.html">⬅ Volver al menú</a>
   </div>
 </body>
 </html>
