--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Elementos de un Circuito</title>
+  <title>Elements of a Circuit</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f0f0f0;
+      background: #eddfa6f7;
       margin: 0;
       padding: 40px;
     }
@@ -17,9 +17,9 @@
       margin-bottom: 30px;
     }
     .container {
-      max-width: 600px;
+      max-width: 700px;
       margin: auto;
-      background: white;
+      background: rgb(241, 229, 195);
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.15);
@@ -29,25 +29,25 @@
       padding: 0;
     }
     li {
-      background: #e9e9e9;
+      background: #f4f2f2;
       padding: 12px 15px;
       margin: 10px 0;
       border-radius: 8px;
       transition: 0.3s;
     }
     li:hover {
-      background: #d2d2d2;
+      background: #ddddda;
     }
     a {
       text-decoration: none;
       color: black;
-      font-size: 18px;
+      font-size: 19px;
       font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>Elementos de un Circuito</h1>
+  <h1>Elements of a Circuit</h1>
   <div class="container">
     <ul>
       <li><a href="Resistores.html">Resistores</a></li>
